12-Jul-2013 Merged debug and non-debug package compilation functions together to reduce code duplication.

12-Jul-2013 The -createdebugproject action no longer mandates the need for a -builder option, to select the builder in action. The C# project generated cannot be executed, so there is a benefit to seeing all applicable builder scripts. Performing an actual build will still require the -builder argument.

11-Jul-2013 Standardized all module Build() functions, to call the first argument (the instance of the module) 'moduleToBuild', so that it can be easily sought out.

11-Jul-2013 Replaced the unregulated PreExecute and PostExecute methods in Builder instances, with Opus.Core.IBuilderPreExecute and Opus.Core.IBuildPostExecute interfaces that need to be implemented should the builder require them.

11-Jul-2013 The build root directory is now created just prior to compiling the package assembly, rather than during argument parsing, which was too early.

07-Jul-2013 Added an argument to CommandLineProcessor.ICommandLineSupport.ToCommandLineArguments, that is either null, or an Opus.Core.StringArray, of names of options to NOT process. If options have been manually extracted from an OptionCollection, but a general run through of the command line arguments is needed, then this can be used to exclude those already processed.

07-Jul-2013 Added property Opus.Core.BaseOptionCollection.OptionNames to provide an array of strings for the options names.

05-Jul-2013 Reworked the QMakeBuilder support, now supporting debug & release .pro files. Dynamic libraries on Windows must write their import library to the same folder as the DLL.

05-Jul-2013 Opus.Core.StringArray now has a construct taking an Opus.Core.Array<string>. And added a ToString(char) overload to format the string array as a single string, separated by char.

05-Jul-2013 Added Opus.Core.FileCollection.ToStringArray()
